--- a/education/engineering.html
+++ b/education/engineering.html
@@ -122,7 +122,7 @@
                 </ul>
             </p>
             <p>
-                The programs in these three groups may be offered as a specialization option for students in the four main programs listed in the table (Civil, Mechanical, Electrical, Chemical), while some schools may separate them into different programs, so be sure to check with your school. You can see that Engineering is such a diverse field that involves many disciplines, even in other non-engineering fields! If you are passionate to lead the world in a better direction, pursuing an engineering degree is probably a good start &#128512;  
+                The programs in these three groups may be offered as a specialization option for students in the four main programs listed in the table (Civil, Mechanical, Electrical, Chemical), while some schools may separate them into different programs, so be sure to check with your school. You can see that Engineering is such a diverse field that involves many disciplines, even in other non-engineering fields! If you are passionate to lead the world in a better direction, pursuing an engineering degree would provide you a good platform to start.  
             </p> 
 
             <h3>
@@ -242,7 +242,7 @@
             </p>
             <p>
                 Many schools allow their students to choose their programs at the end of their first year,
-                so take full advantage of this first year to decide what suits you the most. Please note that some programs may be competitive and often offered with certain quota. Therefore, it is common for schools to enroll students into their preferred choices of program based on their first-year academic performance.    
+                so take full advantage of this first year to consider and decide what suits you the most. Please note that some programs may be competitive and often offered with certain quota. Therefore, it is common for schools to enroll students into their preferred choices of program based on their first-year academic performance.    
             </p>
 
             <h3>
@@ -265,6 +265,22 @@
             <p>
                 If you answered "yes", then you may find it enjoyable to pursue an engineering degree. If you are studying engineering, there may be no need for you to become a master of mathematics (note that degree in engineering and degree in mathematics are different). However, you need to have a certain level of passion in math because you will be dealing with numbers a lot. Often, many engineering courses will help you discover how things work with different principles involving formulae and numbers. It is also common for engineering students to participate in projects in their final year that focus on solving some existing industrial problems. It is important for engineers to have passion in solving problems and finding solutions. 
             </p>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="image/Engine.jpg" width=100% height="85%">
+                        <label>Engineers are expected to have passion in discovering things and solving problems.</label>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="image/SEQU.jpg" width=100% height="85%">
+                        <label>Receiving offshore training. Photo taken at the SEQU training centre.</label>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="image/CDW.jpg" width=100% height="85%">
+                        <label>Discovering offshore. Photo taken at the Cendor offshore plant.</label>
+                    </div>
+                </div>
+            </div>
             
             <h5><u>Character:</u></h5>
             <p style="margin-top: 5px;">
@@ -278,6 +294,10 @@
             <p>
                 If you answered "yes", then an engineering program may be a good fit for you. Engineering students need to have passion to learn knowledge from multiples disciplines and communicate with a multidisplinary audience. Team work is also a strong component in engineering work. Many engineering regulatory bodies expect their applicants to have communication skills and abilities to work in a team. Engineering work may also involves travelling to sites, plants or overseas locations, depending on the nature of work and your organizations. When I worked in an oil and energy industry, I got the opportunity to travel to an offshore plant almost every month. 
             </p>
+            <div class="image">
+                <img src="image/teamwork.JPG" alt="Poster" width=70%>
+                <label>Team work is part of the important components in practicing engineering professions. Photo taken at the West Desaru Offshore Plant during an annual planned shutdown activity, which involved different contractors and crew members of diverse disciplines.</label>
+            </div>
 
             <h5><u>Intention:</u></h5>
             <p style="margin-top: 5px;">
@@ -290,6 +310,10 @@
             <p>
                 Understanding your main driver is important because that reason will keep the level of your motivation if you face any unexpected challenges and obstacles in your future path. It is reasonable to have "big earning" as a motivation, but I suggest not to have this as your sole reason of pursuing any degree. 
             </p>
+            <div class="image">
+                <img src="image/celebration.jpg" alt="Poster" width=70%>
+                <label>One of my major intention of pursuing engineering work/studies is that I have opportunities of interacting with a wide range of experts from various backgrounds (pilots, surveyors, technicians, traders, etc.). We celebrated important festivals together despite of cultural differences.</label>
+            </div>
             <p class="enter"></p>
 
         </main>
@@ -297,4 +321,3 @@
         </div>
     </body>
 </html>
-
