--- a/education/engineering.html
+++ b/education/engineering.html
@@ -260,10 +260,14 @@
                     <li>Do you enjoy mathematical calculations?</li>
                     <li>Are you eager to find out how things work?</li>
                     <li>Are you passionate in finding new innovative solutions to existing problems?</li>
+                    <li>Are you passionate in continuous learning and discovering new environments?</li>
                 </ul>
             </p>
             <p>
-                If you answered "yes", then you may find it enjoyable to pursue an engineering degree. If you are studying engineering, there may be no need for you to become a master of mathematics (note that degree in engineering and degree in mathematics are different). However, you need to have a certain level of passion in math because you will be dealing with numbers a lot. Often, many engineering courses will help you discover how things work with different principles involving formulae and numbers. It is also common for engineering students to participate in projects in their final year that focus on solving some existing industrial problems. It is important for engineers to have passion in solving problems and finding solutions. 
+                If you answered "yes", then you may find it enjoyable to pursue an engineering degree. If you are studying engineering, there may be no need for you to become a master of mathematics (note that degree in engineering and degree in mathematics are different). However, you need to have a certain level of passion in math because you will be dealing with numbers a lot. Often, many engineering courses will help you discover how things work with different principles involving formulae and numbers. 
+            </p>    
+            <P>
+                It is also common for engineering students to participate in projects in their final year that focus on solving some existing industrial problems, and students can get opportunities to experience the working environment in the industry. It is important for engineers to have passion in identifying evolving problems and deriving solutions to solve those challenging problems. With this passion and interest, you would be able to discover and appreciate the beauty of engineering. 
             </p>
             <div class="container">
                 <div class="row">
