--- a/volunteer/agape.html
+++ b/volunteer/agape.html
@@ -37,7 +37,7 @@
 
     <main class="col-md right">
         <h1>
-            AGAPE Children Camp
+            AGAPE Camp for Children
         </h1>
         <hr>
         <h6>
