--- a/volunteer/layout.html
+++ b/volunteer/layout.html
@@ -41,7 +41,7 @@
                 </ul>
                 <b class="unclickable">Highlighted Events:</b>
                 <ul class="nobull">
-                    <li><a class="whitelink" href="../volunteer/agape.html"> AGAPE Children Camp </a></li>
+                    <li><a class="whitelink" href="../volunteer/agape.html"> AGAPE Camp for Children </a></li>
                     <li><a class="whitelink" href="../volunteer/cny.html"> Chinese New Year Dinner </a></li>
                     <li><a class="whitelink" href="../volunteer/mooncake.html"> Mid-Autumn Festival </a></li>
                     <li><a class="whitelink" href="../volunteer/caroling.html"> Christmas Caroling </a></li>
@@ -71,7 +71,7 @@
                         </ul>
                         <b class="unclickable">Highlighted Events:</b>
                         <ul class="nobull">
-                            <li><a class="whitelink" href="../volunteer/agape.html"> AGAPE Children Camp </a></li>
+                            <li><a class="whitelink" href="../volunteer/agape.html"> AGAPE Camp for Children </a></li>
                             <li><a class="whitelink" href="../volunteer/cny.html"> Chinese New Year Dinner </a></li>
                             <li><a class="whitelink" href="../volunteer/mooncake.html"> Mid-Autumn Festival </a></li>
                             <li><a class="whitelink" href="../volunteer/caroling.html"> Christmas Caroling </a></li>
