--- a/education/engineering.html
+++ b/education/engineering.html
@@ -46,7 +46,7 @@
                 I am particularly interested in reaching out to the below groups and having discussions about pursuing engineering studies:
                 <ul style="margin: 5px 10px;">    
                     <li><a href="https://www.canada.ca/en/services/culture/canadian-identity-society/indigenous-peoples-cultures.html">
-                        indigenous people</a> living in Canada</li> 
+                        indigenous peoples</a> living in Canada</li> 
                     <li><a href="https://www.un.org/development/desa/dpad/least-developed-country-category.html#:~:text=About%20the%20LDC%20category,low%20levels%20of%20human%20assets.">
                         least developed countries</a>' citizens defined by the United Nations</li>
                     <li>women</li>
