--- a/education/engineering.html
+++ b/education/engineering.html
@@ -50,7 +50,7 @@
                     <li><a href="https://www.un.org/development/desa/dpad/least-developed-country-category.html#:~:text=About%20the%20LDC%20category,low%20levels%20of%20human%20assets.">
                         least developed countries</a>' citizens defined by the United Nations</li>
                     <li>women</li>
-                    <li>single-parent or low-income family</li>
+                    <li>single-parent or low-income families</li>
                     <li>refugees</li>
                 </ul>
                 I was part of the vulnerable groups when I considered for an engineering degree, so I intend to help more people who have similar situations as mine by providing relevant advice or recommendations. If you identify yourself as any of these groups and currently considering pursuing engineering studies, please feel free to contact me at <a href="mailto:hermanhgy@gmail.com">hermanhgy@gmail.com</a> if you wish to arrange for a chat, which can include, but is not limited to, engineering program structure, school selection, admission requirements, student life, career prospect, social implications of engineering, etc.   
