--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 <br>    
                 <div class="row">
                     <div class="col-md-4">
-                        <a href="volunteer/volunteer.html"> <button class="homebutton">
+                        <a href="volunteer/summary.html"> <button class="homebutton">
                             <img src="icon/volunteer3.png" width="100" height="100">
                             <h4>Community Involvement</h4>
                         </button></a>
