--- a/education/BSc.html
+++ b/education/BSc.html
@@ -424,7 +424,7 @@
                 The best experience of my UNITEN life was definitely my extra-curricular activity involvement. I held multiple leadership responsibilities while progressing towards the 180 academic credits listed above. At the end, all the effort was worth spending as I was awarded as the best graduate in extra-curricular activity involvement. 
              </p>
              <p>
-                UNITEN has a system to record student activity involvement, which is called Student Activity Online Reporting System of UNITEN (SCORUN). For each activity involvement, leadership responsibility, and non-academic award, students will be given certain points in this system. Student Affairs Centre of UNITEN recommended students to accumulate at least 100 SCORUN points before graduation. I managed to accumulate 226 in this system, and therefore was awarded as the best graduate in extra-curricular involvement. More details of my non-academic activities can also be found on my page of <a href = '../volunteer/volunteer.html'>Community Involvement</a>.
+                UNITEN has a system to record student activity involvement, which is called Student Activity Online Reporting System of UNITEN (SCORUN). For each activity involvement, leadership responsibility, and non-academic award, students will be given certain points in this system. Student Affairs Centre of UNITEN recommended students to accumulate at least 100 SCORUN points before graduation. I managed to accumulate 226 in this system, and therefore was awarded as the best graduate in extra-curricular involvement. More details of my non-academic activities can also be found on my page of <a href = '../volunteer/summary.html'>Community Involvement</a>.
             </p>
 
             <div class="container">
