--- a/volunteer/summary.html
+++ b/volunteer/summary.html
@@ -49,7 +49,7 @@
                         <div class="mySlides fade">
                         <div class="numbertext">1 / 5</div>
                         <img src="../volunteer/image/caroling1.jpg" style="width:100%">
-                        <div class="text">Organizing Christmas caroling for people with disability</div>
+                        <div class="text">Organizing Christmas caroling for people with disabilities</div>
                         </div>
                             
                         <div class="mySlides fade">
