--- a/education/award.html
+++ b/education/award.html
@@ -60,7 +60,7 @@
                         <td>Jul 2019</td>
                         <td>Mitacs Globalink Research Award</td>
                         <td>Mitacs Canada</td>
-                        <td>N.A.</td>
+                        <td><a href="../pdf/Douglas Memorial 2nd.pdf" target="_blank">Access</a></td>
                     </tr>
                     <tr>
                         <td>Mar 2019</td>
@@ -78,7 +78,7 @@
                         <td>Mar 2019</td>
                         <td>Douglas Patton Hogg Memorial Award</td>
                         <td>College of Engineering, U of S</td>
-                        <td><a href="../pdf/Douglas Memorial.pdf" target="_blank">Access</a></td>
+                        <td><a href="../pdf/Douglas Memorial 1st.pdf" target="_blank">Access</a></td>
                     </tr>
                     <tr>
                         <td>Sep 2018</td>
