--- a/volunteer/layout.html
+++ b/volunteer/layout.html
@@ -37,7 +37,7 @@
             <div class="aside-content">
                 <b class="unclickable">At a Glance:</b>
                 <ul class="nobull">
-                    <li><a class="whitelink" href="../volunteer/volunteer.html"> My Volunteer Experience</a></li>
+                    <li><a class="whitelink" href="../volunteer/summary.html"> My Volunteer Experience</a></li>
                 </ul>
                 <b class="unclickable">Highlighted Events:</b>
                 <ul class="nobull">
@@ -67,7 +67,7 @@
                     <div class="aside-content">
                         <b class="unclickable">At a Glance:</b>
                         <ul class="nobull">
-                            <li><a class="whitelink" href="../volunteer/volunteer.html"> My Volunteer Experience</a></li>
+                            <li><a class="whitelink" href="../volunteer/summary.html"> My Volunteer Experience</a></li>
                         </ul>
                         <b class="unclickable">Highlighted Events:</b>
                         <ul class="nobull">
