--- a/travel/layout.html
+++ b/travel/layout.html
@@ -37,7 +37,7 @@
             <div class="aside-content">
                 <b class="unclickable">At a Glance:</b>
                 <ul class="nobull">
-                    <li><a class="whitelink" href="../travel/travel.html"> Why Do I Travel? </a></li>
+                    <li><a class="whitelink" href="../travel/summary.html"> Why Do I Travel? </a></li>
                 </ul>
                 <b class="unclickable">Travel Blogs:</b>
                 <ul class="nobull">
@@ -69,7 +69,7 @@
                     <div class="aside-content">
                         <b class="unclickable">At a Glance:</b>
                         <ul class="nobull">
-                            <li><a class="whitelink" href="../travel/travel.html"> Why Do I Travel? </a></li>
+                            <li><a class="whitelink" href="../travel/summary.html"> Why Do I Travel? </a></li>
                         </ul>
                         <b class="unclickable">Travel Blogs:</b>
                         <ul class="nobull">
