--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                         </button></a>
                     </div>
                     <div class="col-md-4">
-                        <a href="travel/travel.html"> <button class="homebutton">
+                        <a href="travel/summary.html"> <button class="homebutton">
                             <img src="icon/travel2.png" width="100" height="100">
                             <h4>Travels & Outreach</h4>
                         </button></a>
