--- a/professional/summary.html
+++ b/professional/summary.html
@@ -162,6 +162,12 @@
             </tr>
             <tr>
                 <td>Jun 2020</td>
+                <td>Leadership Workshop Series</td>
+                <td>McGill University</td>
+                <td><a href="../pdf/   2021-11 Leadership Workshop Series Herman_Heng.pdf" target="_blank">Access</a></td>
+            </tr>
+            <tr>
+                <td>Jun 2020</td>
                 <td><a href="../professional/GPS974.html">GPS 974: Graduate Professional Skills Certificate</a></td>
                 <td>University of Saskatchewan</td>
                 <td><a href="../pdf/2019-12 Graduate Professional Skills Certificate.pdf" target="_blank">Access</a></td>
