--- a/professional/summary.html
+++ b/professional/summary.html
@@ -164,7 +164,7 @@
                 <td>Nov 2021</td>
                 <td>Leadership Workshop Series</td>
                 <td>McGill University</td>
-                <td><a href="../pdf/2021-11 Leadership Workshop Series Herman_Heng.pdf" target="_blank">Access</a></td>
+                <td><a href="../pdf/2021-11 Leadership Workshop Series Herman_Heng" target="_blank">Access</a></td>
             </tr>
             <tr>
                 <td>Jun 2020</td>
