--- a/education/award.html
+++ b/education/award.html
@@ -51,6 +51,18 @@
                         <th>Access the Cert</th>
                     </tr>
                     <tr>
+                        <td>Mar 2022</td>
+                        <td>Best Project - HtCtW Collaborative Project</td>
+                        <td>How to Change the World </td>
+                        <td><a href="../pdf/Douglas Memorial 2nd.pdf" target="_blank">Access</a></td>
+                    </tr>
+                    <tr>
+                        <td>Nov 2021</td>
+                        <td>Vasdaz Scholar</td>
+                        <td>McGill University</td>
+                        <td>N.A.</td>
+                    </tr>
+                    <tr>
                         <td>Mar 2020</td>
                         <td>Douglas Patton Hogg Memorial Award</td>
                         <td>College of Engineering, U of S</td>
