--- a/professional/summary.html
+++ b/professional/summary.html
@@ -161,6 +161,12 @@
                 <th>Access the Cert</th>
             </tr>
             <tr>
+                <td>Mar 2022</td>
+                <td><a href="https://www.htctw.org/students-and-early-career-professionals">One-Week Intensive Collaborative Workshop</a></td>
+                <td>How to Change the World</td>
+                <td>N.A.</td>
+            </tr>
+            <tr>
                 <td>Nov 2021</td>
                 <td>Leadership Workshop Series</td>
                 <td>McGill University</td>
