--- a/professional/summary.html
+++ b/professional/summary.html
@@ -162,7 +162,7 @@
             </tr>
             <tr>
                 <td>Mar 2022</td>
-                <td><a href="https://www.htctw.org/students-and-early-career-professionals">One-Week Intensive Collaborative Workshop</a></td>
+                <td><a href="https://www.htctw.org/students-and-early-career-professionals">HtCtW One-Week Collaborative Workshop</a></td>
                 <td>How to Change the World</td>
                 <td>N.A.</td>
             </tr>
