--- a/professional/summary.html
+++ b/professional/summary.html
@@ -164,7 +164,7 @@
                 <td>Mar 2022</td>
                 <td><a href="https://www.htctw.org/students-and-early-career-professionals">HtCtW One-Week Collaborative Workshop</a></td>
                 <td>How to Change the World</td>
-                <td>N.A.</td>
+                <td><a href="https://eu.badgr.com/public/assertions/VoUInjt7T-OrCO36ALma8g" target="_blank">Access</a></td>
             </tr>
             <tr>
                 <td>Nov 2021</td>
