--- a/education/award.html
+++ b/education/award.html
@@ -54,7 +54,7 @@
                         <td>Mar 2022</td>
                         <td>Best Project - HtCtW Collaborative Project</td>
                         <td>How to Change the World </td>
-                        <td>N.A.</a></td>
+                        <td><a href="https://eu.badgr.com/public/assertions/VoUInjt7T-OrCO36ALma8g" target="_blank">Access</a></td>
                     </tr>
                     <tr>
                         <td>Nov 2021</td>
