--- a/education/publication.html
+++ b/education/publication.html
@@ -42,8 +42,9 @@
             <h3>
                 My Publications
             </h3>
-            <p>
+            <p> 
                 <ul>   
+                    <li>Heng, H., Sumner, D. (2022). <a href="https://doi.org/10.1016/j.ijheatfluidflow.2022.109005">The mean pressure distribution on the free end of a square prism</a>. International Journal of Heat and Fluid Flow 96, 109005.</li>
                     <li>Heng, H., Meng, FR., McKechnie, J. (2021). <a href="https://doi.org/10.1016/j.wasman.2021.07.032">Wind turbine blade wastes and the environmental impacts in Canada</a>. Waste Management 133, 59-70.</li>
                     <li>Heng, H., Sumner, D. (2020). <a href="https://doi.org/10.12989/was.2020.31.3.255">Wind loading of a finite prism: aspect ratio, incidence and boundary layer thickness effects</a>. Wind and Structures 31, 255-267.</li>
                     <li>Beitel, A., Heng, H., Sumner, D. (2019). <a href="https://doi.org/10.1016/j.jweia.2019.01.009">The effect of aspect ratio on the aerodynamic forces and bending moment for a surface-mounted finite-height cylinder</a>. Journal of Wind Engineering and Industrial Aerodynamics, 186, 204-213.</li>
