--- a/education/publication.html
+++ b/education/publication.html
@@ -58,7 +58,7 @@
                     <li>H. Heng, and D. Sumner (2019). Effect of aspect ratio and incidence angle on the free-end mean surface
                         pressure distribution for a finite-height square prism, <a href="https://www.rockymountainfluids.com/">Okanagan Fluid Dynamics Meeting</a>, Canmore,
                         Alberta, April 26-28, 2019.</li>
-                    <li>Heng, H., Palecka, J., Hampl, S., Goroshin, S.,& Bergthorson, J. (2022). Metal-LOX Space Propulsion Technology For In-Situ Resource Utilization (ISRU), COSPAR 2022 44th Scientific Assembly, 
+                    <li>Heng, H., Palecka, J., Hampl, S., Goroshin, S.,& Bergthorson, J. (2022). Metal-LOX Space Propulsion Technology For In-Situ Resource Utilization (ISRU), <a href="https://www.cosparathens2022.org/">COSPAR 2022 44th Scientific Assembly</a>, 
                         July 16-24, 2022, Athens, Greece. </li>
                 </ul>
             </p>
