--- a/education/publication.html
+++ b/education/publication.html
@@ -43,7 +43,8 @@
                 My Publications
             </h3>
             <p> 
-                <ul>   
+                <ul>  
+                    <li>Chew Y.E., Gan Z.W., Heng H., Bhasker Nair P., Tan R.R. & Foo D.C.Y.(2023). <a href="https://doi.org/10.1007/s10098-023-02537-9">Carbon emissions pinch analysis (CEPA) for emissions reduction and energy planning in Canada</a>. Clean Technologies and Environmental Policy.</li> 
                     <li>Heng, H., Sumner, D. (2022). <a href="https://doi.org/10.1016/j.ijheatfluidflow.2022.109005">The mean pressure distribution on the free end of a square prism</a>. International Journal of Heat and Fluid Flow 96, 109005.</li>
                     <li>Heng, H., Meng, FR., McKechnie, J. (2021). <a href="https://doi.org/10.1016/j.wasman.2021.07.032">Wind turbine blade wastes and the environmental impacts in Canada</a>. Waste Management 133, 59-70.</li>
                     <li>Heng, H., Sumner, D. (2020). <a href="https://doi.org/10.12989/was.2020.31.3.255">Wind loading of a finite prism: aspect ratio, incidence and boundary layer thickness effects</a>. Wind and Structures 31, 255-267.</li>
@@ -55,11 +56,11 @@
             </h3>
             <p>
                 <ul>   
+                    <li>Heng, H., Palecka, J., Hampl, S., Goroshin, S.,& Bergthorson, J. (2022). Metal-LOX Space Propulsion Technology for In-Situ Resource Utilization (ISRU), <a href="https://www.cosparathens2022.org/">COSPAR 2022 44th Scientific Assembly</a>, 
+                        July 16-24, 2022, Athens, Greece. </li>
                     <li>H. Heng, and D. Sumner (2019). Effect of aspect ratio and incidence angle on the free-end mean surface
                         pressure distribution for a finite-height square prism, <a href="https://www.rockymountainfluids.com/">Okanagan Fluid Dynamics Meeting</a>, Canmore,
                         Alberta, April 26-28, 2019.</li>
-                    <li>Heng, H., Palecka, J., Hampl, S., Goroshin, S.,& Bergthorson, J. (2022). Metal-LOX Space Propulsion Technology for In-Situ Resource Utilization (ISRU), <a href="https://www.cosparathens2022.org/">COSPAR 2022 44th Scientific Assembly</a>, 
-                        July 16-24, 2022, Athens, Greece. </li>
                 </ul>
             </p>
 
