--- a/education/publication.html
+++ b/education/publication.html
@@ -56,9 +56,9 @@
             </h3>
             <p>
                 <ul>   
-                    <li>H. Heng, J. Palecka, S. Hampl, S. Goroshin,& J. Bergthorson (2022). Metal-LOX Space Propulsion Technology for In-Situ Resource Utilization (ISRU), <a href="https://www.cosparathens2022.org/">COSPAR 2022 44th Scientific Assembly</a>, 
+                    <li>H. Heng, J. Palecka, S. Hampl, S. Goroshin, & J. Bergthorson (2022). Metal-LOX Space Propulsion Technology for In-Situ Resource Utilization (ISRU), <a href="https://www.cosparathens2022.org/">COSPAR 2022 44th Scientific Assembly</a>, 
                         July 16-24, 2022, Athens, Greece. </li>
-                    <li>H. Heng, and D. Sumner (2019). Effect of aspect ratio and incidence angle on the free-end mean surface
+                    <li>H. Heng, & D. Sumner (2019). Effect of aspect ratio and incidence angle on the free-end mean surface
                         pressure distribution for a finite-height square prism, <a href="https://www.rockymountainfluids.com/">Okanagan Fluid Dynamics Meeting</a>, Canmore,
                         Alberta, April 26-28, 2019.</li>
                 </ul>
