--- a/education/publication.html
+++ b/education/publication.html
@@ -44,7 +44,7 @@
             </h3>
             <p> 
                 <ul>  
-                    <li>H. Heng, J. Palecka, S. Goroshin, & J. Bergthorson (2024). <a href="https://doi.org/10.1016/j.proci.2024.105613">Near-limit discrete flames of iron particle suspensions in sounding rocket microgravity experiments</a>. Proceedings of the Combustion Institute 40(1-4), 105613. [Open Access] [<a href="https://www.youtube.com/watch?v=LhCFEYK3Fww&t=612s">Distinguished Paper Award</a>] </li>  
+                    <li>H. Heng, J. Palecka, S. Goroshin, & J. Bergthorson (2024). <a href="https://doi.org/10.1016/j.proci.2024.105613">Near-limit discrete flames of iron particle suspensions in sounding rocket microgravity experiments</a>. Proceedings of the Combustion Institute 40(1-4), 105613. [Open Access] [<a href="https://www.youtube.com/watch?v=LhCFEYK3Fww">Distinguished Paper Award</a>] </li>  
                     <li>YE. Chew, ZW. Gan, H. Heng, P. Nair, R. Tan, & D. Foo (2023). <a href="https://doi.org/10.1007/s10098-023-02537-9">Carbon emissions pinch analysis (CEPA) for emissions reduction and energy planning in Canada</a>. Clean Technologies and Environmental Policy 25, 2413-2431.</li> 
                     <li>H. Heng, & D. Sumner (2022). <a href="https://doi.org/10.1016/j.ijheatfluidflow.2022.109005">The mean pressure distribution on the free end of a square prism</a>. International Journal of Heat and Fluid Flow 96, 109005.</li>
                     <li>H. Heng, FR. Meng, & J. McKechnie (2021). <a href="https://doi.org/10.1016/j.wasman.2021.07.032">Wind turbine blade wastes and the environmental impacts in Canada</a>. Waste Management 133, 59-70.</li>
