--- a/education/publication.html
+++ b/education/publication.html
@@ -44,12 +44,12 @@
             </h3>
             <p> 
                 <ul>  
-                    <li>H. Heng, J. Palecka, S. Goroshin, & J. Bergthorson (2024). <a href="https://doi.org/10.1016/j.proci.2024.105613">Near-limit discrete flames of iron particle suspensions in sounding rocket microgravity experiments</a>. Proceedings of the Combustion Institute 40(1-4), 105613. [Open Access] [<a href="https://www.youtube.com/watch?v=LhCFEYK3Fww">Distinguished Paper Award</a>] </li>  
-                    <li>YE. Chew, ZW. Gan, H. Heng, P. Nair, R. Tan, & D. Foo (2023). <a href="https://doi.org/10.1007/s10098-023-02537-9">Carbon emissions pinch analysis (CEPA) for emissions reduction and energy planning in Canada</a>. Clean Technologies and Environmental Policy 25, 2413-2431.</li> 
-                    <li>H. Heng, & D. Sumner (2022). <a href="https://doi.org/10.1016/j.ijheatfluidflow.2022.109005">The mean pressure distribution on the free end of a square prism</a>. International Journal of Heat and Fluid Flow 96, 109005.</li>
-                    <li>H. Heng, FR. Meng, & J. McKechnie (2021). <a href="https://doi.org/10.1016/j.wasman.2021.07.032">Wind turbine blade wastes and the environmental impacts in Canada</a>. Waste Management 133, 59-70.</li>
-                    <li>H. Heng, & D. Sumner (2020). <a href="https://doi.org/10.12989/was.2020.31.3.255">Wind loading of a finite prism: aspect ratio, incidence and boundary layer thickness effects</a>. Wind and Structures 31, 255-267.</li>
-                    <li>A. Beitel, H. Heng, & D. Sumner (2019). <a href="https://doi.org/10.1016/j.jweia.2019.01.009">The effect of aspect ratio on the aerodynamic forces and bending moment for a surface-mounted finite-height cylinder</a>. Journal of Wind Engineering and Industrial Aerodynamics 186, 204-213.</li>
+                    <li>H. Heng, J. Palecka, S. Goroshin, & J. Bergthorson (2024). <a href="https://doi.org/10.1016/j.proci.2024.105613" target="_blank">Near-limit discrete flames of iron particle suspensions in sounding rocket microgravity experiments</a>. Proceedings of the Combustion Institute 40(1-4), 105613. [Open Access] [<a href="https://www.youtube.com/watch?v=LhCFEYK3Fww" target="_blank">Distinguished Paper Award</a>] </li>  
+                    <li>YE. Chew, ZW. Gan, H. Heng, P. Nair, R. Tan, & D. Foo (2023). <a href="https://doi.org/10.1007/s10098-023-02537-9" target="_blank">Carbon emissions pinch analysis (CEPA) for emissions reduction and energy planning in Canada</a>. Clean Technologies and Environmental Policy 25, 2413-2431.</li> 
+                    <li>H. Heng, & D. Sumner (2022). <a href="https://doi.org/10.1016/j.ijheatfluidflow.2022.109005" target="_blank">The mean pressure distribution on the free end of a square prism</a>. International Journal of Heat and Fluid Flow 96, 109005.</li>
+                    <li>H. Heng, FR. Meng, & J. McKechnie (2021). <a href="https://doi.org/10.1016/j.wasman.2021.07.032" target="_blank">Wind turbine blade wastes and the environmental impacts in Canada</a>. Waste Management 133, 59-70.</li>
+                    <li>H. Heng, & D. Sumner (2020). <a href="https://doi.org/10.12989/was.2020.31.3.255" target="_blank">Wind loading of a finite prism: aspect ratio, incidence and boundary layer thickness effects</a>. Wind and Structures 31, 255-267.</li>
+                    <li>A. Beitel, H. Heng, & D. Sumner (2019). <a href="https://doi.org/10.1016/j.jweia.2019.01.009" target="_blank">The effect of aspect ratio on the aerodynamic forces and bending moment for a surface-mounted finite-height cylinder</a>. Journal of Wind Engineering and Industrial Aerodynamics 186, 204-213.</li>
                 </ul>        
             </p>
             <h3>
@@ -57,18 +57,18 @@
             </h3>
             <p>
                 <ul>
-                    <li>H. Heng, C. Mani, N. Chepel, K. Mangalvedhe, E. Antar, S. Goroshin, J. Bergthorson (2024). Stabilization of silicon Bunsen flames on a laminar dust burner, <a href="https://www.tu-darmstadt.de/clean-circles/transfer_outreach_cc/mecre_2024/index.en.jsp">2nd Metal-enabled Cycle of Renewable Energy (MeCRE)</a>, 
+                    <li>H. Heng, C. Mani, N. Chepel, K. Mangalvedhe, E. Antar, S. Goroshin, J. Bergthorson (2024). Stabilization of silicon Bunsen flames on a laminar dust burner, <a href="https://www.tu-darmstadt.de/clean-circles/transfer_outreach_cc/mecre_2024/index.en.jsp" target="_blank">2nd Metal-enabled Cycle of Renewable Energy (MeCRE)</a>, 
                         November 13-15, 2024, Darmstadt, Germany. </li>
-                    <li>H. Heng, J. Palečka, S. Goroshin, J. Bergthorson (2024). Near-limit discrete flames of iron particle suspensions in sounding rocket microgravity experiments, <a href="https://combustioninstitute.org/about_the_international_sympos.php">40th International Symposium of Combustion - Emphasizing Energy Transition</a>, 
+                    <li>H. Heng, J. Palečka, S. Goroshin, J. Bergthorson (2024). Near-limit discrete flames of iron particle suspensions in sounding rocket microgravity experiments, <a href="https://combustioninstitute.org/about_the_international_sympos.php" target="_blank">40th International Symposium of Combustion - Emphasizing Energy Transition</a>, 
                         July 21-26, 2024, Milan, Italy. </li>
-                    <li>H. Heng, J. Palečka, S. Goroshin, J. Bergthorson (2024). Iron discrete flames in microgravity close to the propagation limit, <a href="https://www.combustion-institute.ca/">Combustion Institute - Canadian Section 2024 Spring Techical Meeting</a>, 
+                    <li>H. Heng, J. Palečka, S. Goroshin, J. Bergthorson (2024). Iron discrete flames in microgravity close to the propagation limit, <a href="https://www.combustion-institute.ca/" target="_blank">Combustion Institute - Canadian Section 2024 Spring Techical Meeting</a>, 
                         May 14-16, 2024, Kingston, Canada. </li>
-                    <li>H. Heng, A. Pan, J. Palečka, S. Hampl, S. Goroshin, J. Bergthorson (2022). Metal-LOX Space Propulsion Technology for In-Situ Resource Utilization (ISRU), <a href="https://www.tue.nl/en/our-university/calendar-and-events/31-10-2022-workshop-metal-enabled-cycle-of-renewable-energy-mecre">1st Metal-enabled Cycle of Renewable Energy (MeCRE)</a>, 
+                    <li>H. Heng, A. Pan, J. Palečka, S. Hampl, S. Goroshin, J. Bergthorson (2022). Metal-LOX Space Propulsion Technology for In-Situ Resource Utilization (ISRU), <a href="https://www.tue.nl/en/our-university/calendar-and-events/31-10-2022-workshop-metal-enabled-cycle-of-renewable-energy-mecre" target="_blank">1st Metal-enabled Cycle of Renewable Energy (MeCRE)</a>, 
                         October 31- November 01, 2022, Eindhoven, Netherlands. </li>
-                    <li>H. Heng, J. Palecka, S. Hampl, S. Goroshin, J. Bergthorson (2022). Metal-LOX Space Propulsion Technology for In-Situ Resource Utilization (ISRU), <a href="https://www.cosparathens2022.org/">COSPAR 2022 44th Scientific Assembly</a>, 
+                    <li>H. Heng, J. Palecka, S. Hampl, S. Goroshin, J. Bergthorson (2022). Metal-LOX Space Propulsion Technology for In-Situ Resource Utilization (ISRU), <a href="https://www.cosparathens2022.org/" target="_blank">COSPAR 2022 44th Scientific Assembly</a>, 
                         July 16-24, 2022, Athens, Greece. </li>
                     <li>H. Heng, D. Sumner (2019). Effect of aspect ratio and incidence angle on the free-end mean surface
-                        pressure distribution for a finite-height square prism, <a href="https://www.rockymountainfluids.com/">Okanagan Fluid Dynamics Meeting</a>, Canmore,
+                        pressure distribution for a finite-height square prism, <a href="https://www.rockymountainfluids.com/" target="_blank">Okanagan Fluid Dynamics Meeting</a>, Canmore,
                         Alberta, April 26-28, 2019.</li>
                 </ul>
             </p>
